fixing whitespaces

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,7 +371,6 @@ li a:focus {
 	height: 175px;
 	padding-top: 13vh;
 	margin-bottom: 10vh;
-	overflow: hidden;
 }
 
 
